# Figure.5-WP-ReID

./: README.md  requirements.txt  setup.cfg
_test/: main.py
notebook/: Figure5.ipynb  main.ipynb  parameter test.ipynb
notebook/.ipynb_checkpoints/: Figure5-checkpoint.ipynb
src/rcpm/: dataset.py  eval.py  update_module.py
src/rcpm/wp_reid_dataset/: README.md  wp_reid_dataset.py
src/rpcm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
