[metadata]
name = rpcm
version = 0.0.1
author = jangsoopark
author_email = jangsoopark@kw.ac.kr
description = A python package of RPCM
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jangsoopark/WP-ReID
project_urls =
    Bug Tracker = https://github.com/jangsoopark/WP-ReID/pulls
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Python Software Foundation License
    Operating System :: OS Independent

[options]
package_dir =
    =  src
packages = find:
python_requires = >= 3.8
install_requires =
    prettytable
    numpy
    ray[tune]

[options.packages.find]
where = src